<resources>
    <string name="app_name">Board Games Tracker</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="app_description">A tool to keep tracks of boardgame</string>
    <string name="new_game">New Game</string>
    <string name="new_player_name">New Player Name</string>
    <string name="game_title">Game Title</string>
    <string name="exception_player_name_not_set">Player name not set</string>
    <string name="exception_game_title_not_set">Game title not set</string>
    <string name="exception_game_must_have_at_least_two_players">Game must have at least two players</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="number_of_player_format">%d Players</string>
    <string name="players">Players</string>
    <string name="unknown_value">-</string>
    <string name="exception_null_ids_for_relation">Null ids for relation</string>
    <string name="start_new_game">Start new game</string>
    <string name="start">Start</string>
    <string name="playing">Playing</string>
    <string name="no_game_is_playing_now">No Game is Playing Now</string>
    <string name="transfer">Transfer</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_player_format">Add to Player: %s</string>
    <string name="remove_from_player_format">Remove from Player: %s</string>
    <string name="transfer_from_player_format">Transfer from Player: %s</string>
    <string name="to_player">To Player:</string>
    <string name="input_amount">Input Amount</string>
    <string name="game_settings">Game Settings</string>
    <string name="select_total_time_for_this_game">Select total time for this game</string>
    <string name="total_time">Total Time</string>
    <string name="format_hours">%d hours</string>
    <string name="format_minutes">%d minutes</string>
    <string name="format_seconds">%d seconds</string>
    <string name="player_turn_time">Player Turn Time</string>
    <string name="set_time_for_each_turn">Set time for each turn</string>
    <string name="time_out">Time Out</string>
    <string name="add_score_to_player_format">Added %1$d to Player %2$s</string>
    <string name="remove_score_from_player_format">Removed %1$d from Player %2$s</string>
    <string name="transfer_score_to_player_format">Transferred %1$d from Player %2$s to Player %3$s </string>
    <string name="game_logs">Game Logs</string>
    <string name="start_turn">Start Turn</string>
    <string name="format_countdown_timer">%1$02d:%2$02d:%3$02d</string>
    <string name="starting_score">Starting Score</string>
    <string name="set_staring_score_for_all_players">Set starting scores for all players</string>
    <string name="set">Set</string>
    <string name="done">Done</string>
    <string name="information">Information</string>
    <string name="ok">Ok</string>
    <string name="random_a_player">Random a player</string>
    <string name="zero_time">00</string>
    <string name="seconds">Seconds</string>
    <string name="minutes_space">Minutes :</string>
    <string name="no_game">No Game</string>
    <string name="add_new_game">add a new game</string>
    <string name="highest_score_win">Highest Scores Win</string>
    <string name="lowest_score_win">Lowest Scores Win</string>
    <string name="winning_condition">Winning Condition</string>
    <string name="finish_game">Finish Game</string>
    <string name="creation_date">Creation Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="default_text">Default:</string>
    <string name="finished">Finished</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="not_set">Not Set</string>
    <string name="are_you_sure_you_want_to_finish_this_game_now">Are you sure you want to finish this game now?</string>
    <string name="do_you_want_to_create_a_new_game_with_same_setting">Do you want to start a new game with same settings?</string>
    <string name="no_logs">No Logs</string>
    <string name="cp_press_again_to_exit">Press again to exit</string>
    <string name="roll_a_dice">Roll a Dice</string>
    <string name="tap_any_dice_to_start">Tap any dice to start</string>
    <string name="close">Close</string>
    <string name="rolling_dice">Rolling Dice</string>
    <string name="one_dice">One Dice</string>
    <string name="two_dices">Two Dices</string>
    <string name="three_dices">Three Dices</string>
    <string name="four_dices">Four Dices</string>
    <string name="five_dices">Five Dices</string>
    <string name="six_dices">Six Dices</string>
    <string name="seven_dices">Seven Dices</string>
    <string name="eight_dices">Eight Dices</string>
    <string name="nine_dices">Nine Dices</string>
    <string name="set_number_of_rolling_dice">Set number of rolling dices</string>
    <string name="no_dice">No Dice</string>
</resources>
