<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_white"
        android:title="@string/filter"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_filter_all"
                android:title="@string/all"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_filter_playing"
                android:title="@string/playing"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_filter_finished"
                android:title="@string/finished"
                app:showAsAction="never" />

        </menu>

    </item>


</menu>