<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_standard_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/activity_standard_margin"
        android:layout_marginStart="@dimen/activity_standard_margin"
        android:orientation="horizontal">

        <com.devspark.robototextview.widget.RobotoTextView
            style="@style/AppTheme.game_finish.header_key.text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/creation_date" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/creation_date"
            style="@style/AppTheme.game_finish.header_value.text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_value" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/activity_standard_margin"
        android:layout_marginStart="@dimen/activity_standard_margin"
        android:orientation="horizontal">

        <com.devspark.robototextview.widget.RobotoTextView
            style="@style/AppTheme.game_finish.header_key.text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/ending_date" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/ending_date"
            style="@style/AppTheme.game_finish.header_value.text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_value" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/activity_standard_margin"
        android:layout_marginStart="@dimen/activity_standard_margin"
        android:orientation="horizontal">

        <com.devspark.robototextview.widget.RobotoTextView
            style="@style/AppTheme.game_finish.header_key.text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/winning_condition" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/winning_condition"
            style="@style/AppTheme.game_finish.header_value.text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_value" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_standard_margin"
        android:layout_marginEnd="@dimen/activity_standard_margin"
        android:layout_marginStart="@dimen/activity_standard_margin"
        android:orientation="horizontal">

        <com.devspark.robototextview.widget.RobotoTextView
            style="@style/AppTheme.game_finish.header_key.text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/starting_score" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/starting_score"
            style="@style/AppTheme.game_finish.header_value.text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_value" />

    </LinearLayout>

    <include layout="@layout/divider_line" />

</LinearLayout>