<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/player_info_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/player_name"
                style="@style/AppTheme.ingame.player_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:text="Ghost" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/player_score"
                style="@style/AppTheme.ingame.player_score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="123" />

        </LinearLayout>

        <include layout="@layout/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/player_action_add"
                style="@style/AppTheme.ingame.player_score_action_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/add" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/player_action_remove"
                style="@style/AppTheme.ingame.player_score_action_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_weight="1.0"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/remove" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/player_action_transfer"
                style="@style/AppTheme.ingame.player_score_action_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/transfer" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>
